<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true">


  <ImageView
      android:id="@+id/ImageViewTemp"
      android:layout_width="413dp"
      android:layout_height="318dp"
      android:layout_marginTop="4dp"
      android:contentDescription="@string/temp_image"
      android:scaleType="fitXY"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="4dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ImageViewTemp" />

  <TextView
      android:id="@+id/textViewCurrentTemp2"
      android:layout_width="63dp"
      android:layout_height="16dp"
      android:layout_marginTop="4dp"
      android:text="@string/current_temp"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.591"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/divider" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/min"
      android:textColor="@color/white"
      app:layout_constraintEnd_toStartOf="@+id/textView4"
      app:layout_constraintHorizontal_bias="0.44"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/textViewMinTemp" />

  <TextView
      android:id="@+id/textViewMinTemp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/textview"
      android:textColor="@color/white"
      app:layout_constraintEnd_toStartOf="@+id/textViewCurrentTemp2"
      app:layout_constraintHorizontal_bias="0.448"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/divider" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="63dp"
      android:layout_height="16dp"
      android:layout_marginTop="36dp"
      android:text="@string/current"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.566"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/divider" />

  <View
      android:id="@+id/divider2"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="8dp"

      android:background="?android:attr/listDivider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="394dp"
      android:layout_height="326dp"

      android:layout_marginTop="68dp"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/divider"
      app:layout_constraintVertical_bias="0.0" />


  <TextView
      android:id="@+id/textViewMaxTemp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/temp_max1"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.528"
      app:layout_constraintStart_toEndOf="@+id/textViewCurrentTemp2"
      app:layout_constraintTop_toTopOf="@+id/divider" />

  <TextView
      android:id="@+id/textView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:text="@string/max_temp"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="@+id/divider2"
      app:layout_constraintHorizontal_bias="0.557"
      app:layout_constraintStart_toEndOf="@+id/textView4"
      app:layout_constraintTop_toTopOf="@+id/textViewMaxTemp" />

  <TextView
      android:id="@+id/textViewTempDesc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="152dp"
      android:text="@string/temp_desc"
      android:textColor="@color/white"
      android:textSize="25sp"
      app:layout_constraintEnd_toEndOf="@+id/ImageViewTemp"
      app:layout_constraintHorizontal_bias="0.406"
      app:layout_constraintStart_toStartOf="@+id/ImageViewTemp"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textViewCurrentTemp1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="76dp"
      android:textSize="60sp"

      android:textColor="@color/white"
      android:text="@string/current_temp"
      app:layout_constraintEnd_toEndOf="@+id/ImageViewTemp"
      app:layout_constraintHorizontal_bias="0.471"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/ImageViewTemp" />

  <TextView
      android:id="@+id/textViewUpdatedAt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/updated_at"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.054"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/recyclerView"
      app:layout_constraintVertical_bias="1.0" />

  <TextView
      android:id="@+id/textViewCity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/city"
      android:textColor="@color/white"
      android:textSize="40sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.423"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/ImageViewTemp" />

  <TextView
      android:id="@+id/textViewFeelLike"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="200dp"
      android:text="@string/feel_like"

      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.392"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentBottom="true"
      android:layout_margin="16dp"
      android:layout_marginBottom="8dp"
      android:contentDescription="@string/fab"
      android:src="@drawable/ic_add_black_24dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@+id/textViewUpdatedAt" />

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

